--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
     "nodemon": "^3.1.0",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "request": "^2.88.2"
   }
 }
